# python-sanlock

./: .gitignore  README.md  example.py  pyproject.toml  python-sanlock.spec  sanlock.c  setup.py
.copr/: Makefile
.github/workflows/: ci.yml
tests/: conftest.py  env.sh  python_test.py  util.py
