[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sanlock-python"
version = "5.1.0"
description = "Python bindings for the sanlock library"
readme = "README.md"
license = { text = "GPL-2.0-or-later" }
requires-python = ">=3.6"
classifiers = [
    "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: C",
    "Topic :: System :: Clustering",
    "Topic :: System :: Systems Administration",
]

[project.urls]
Homepage = "https://github.com/oVirt/python-sanlock"

[tool.pytest.ini_options]
testpaths = ["tests"]
